about page setup

--- a/app/partials/pages/landing-2/_feature__v2.njk
+++ b/app/partials/pages/landing-2/_feature__v2.njk
@@ -5,37 +5,37 @@
         {
         id:1,
         img:"./image/l-2/f-1.svg",
-        title:"Clean & Elegent Design",
+        title:"Team work",
         text:"Lorem ipsum dolor sit amet, consectetu adipiscing elit eque dolor."
         },
         {
         id:2,
         img:"./image/l-2/f-2.svg",
-        title:"100% Responsive Layout",
+        title:"Comapny Growth",
         text:"Lorem ipsum dolor sit amet, consectetu adipiscing elit eque dolor."
         },
         {
         id:3,
         img:"./image/l-2/f-3.svg",
-        title:"Awesome Line Icon",
+        title:"Move Like a Startup",
         text:"Lorem ipsum dolor sit amet, consectetu adipiscing elit eque dolor."
         },
         {
         id:4,
         img:"./image/l-2/f-4.svg",
-        title:"Unlimited Component Library",
+        title:"Take Ownership",
         text:"Lorem ipsum dolor sit amet, consectetu adipiscing elit eque dolor."
         },
         {
         id:5,
         img:"./image/l-2/f-5.svg",
-        title:"Smooth UI Interaction",
+        title:"Results Matter",
         text:"Lorem ipsum dolor sit amet, consectetu adipiscing elit eque dolor."
         },
         {
         id:6,
         img:"./image/l-2/f-6.svg",
-        title:"24/7 Customer Support",
+        title:"Innovation",
         text:"Lorem ipsum dolor sit amet, consectetu adipiscing elit eque dolor."
         }
 
@@ -46,7 +46,7 @@
         <div class="row align-items-center justify-content-center">
             <div class="section-title-block text-center">
                 <h6 class="subtitle text-primary mb-10">Our core values & principles</h6>
-                <h2 class="title">What Makes Us Unique From<br class=" d-none d-xs-block">Others</h2>
+                <h2 class="title">The Values That Shape Everything<br class=" d-none d-xs-block">We Do at Bestkit</h2>
             </div>
         </div>
         <div class="row card-row justify-content-center overflow-hidden">
