--- a/app/partials/pages/landing-3/_feature.njk
+++ b/app/partials/pages/landing-3/_feature.njk
@@ -61,7 +61,7 @@ User interface website."
 
 
 ]%}
-<div class="feature-section-02">
+<div class="feature-section-02 overflow-hidden">
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="section-title-block text-center">
