about testimonial fix

--- a/app/partials/pages/landing-2/_testimonial.njk
+++ b/app/partials/pages/landing-2/_testimonial.njk
@@ -31,7 +31,7 @@
                 <div class="testimonial-slider--02">
                     <div class="single-slide">
                        <div class="testimonial-card-02">
-                          <div class="testimonial-card-02__content">
+                          <div class="testimonial-card-02__content {{args.bgClassName}}">
                               <div class="quote">
                                   <svg width="43" height="30" viewBox="0 0 43 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                   <path d="M42.0034 12H33.0034L39.0035 1.90735e-06H30.0034L24.0034 12V30H42.0034V12Z" fill="#DEE7EE"/>
@@ -55,7 +55,7 @@
                     </div>
                     <div class="single-slide">
                        <div class="testimonial-card-02">
-                          <div class="testimonial-card-02__content">
+                          <div class="testimonial-card-02__content {{args.bgClassName}}">
                               <div class="quote">
                                   <svg width="43" height="30" viewBox="0 0 43 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                   <path d="M42.0034 12H33.0034L39.0035 1.90735e-06H30.0034L24.0034 12V30H42.0034V12Z" fill="#DEE7EE"/>
@@ -79,7 +79,7 @@
                     </div>
                     <div class="single-slide">
                        <div class="testimonial-card-02">
-                          <div class="testimonial-card-02__content">
+                          <div class="testimonial-card-02__content {{args.bgClassName}}">
                               <div class="quote">
                                   <svg width="43" height="30" viewBox="0 0 43 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                   <path d="M42.0034 12H33.0034L39.0035 1.90735e-06H30.0034L24.0034 12V30H42.0034V12Z" fill="#DEE7EE"/>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="single-slide">
                        <div class="testimonial-card-02">
-                          <div class="testimonial-card-02__content">
+                          <div class="testimonial-card-02__content {{args.bgClassName}}">
                               <div class="quote">
                                   <svg width="43" height="30" viewBox="0 0 43 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                   <path d="M42.0034 12H33.0034L39.0035 1.90735e-06H30.0034L24.0034 12V30H42.0034V12Z" fill="#DEE7EE"/>
