about content two complete

--- a/app/partials/pages/about/_content-02.njk
+++ b/app/partials/pages/about/_content-02.njk
@@ -1,3 +1,35 @@
 {% macro render(args) %}
-    
+    <div class="about-content-section-02 bg-white-lilac">
+        <div class="container">
+            <div class="section-title-block text-center">
+                <h6 class="subtitle mb-10 text-primary">Our Story & Mission</h6>
+                <h2 class="title">The Story and mission Behind <br class=" d-none d-sm-block">
+                    Our Company</h2>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="about-content-section-02__content content-one">
+                        <div class="image-group">
+                            <img src="./image/about/content-1--1.png" alt="content-image">
+                        </div>
+                        <div class="content-area">
+                            <h6 class="title">We Are on the Mission to Increase Your Business</h6>
+                            <p class="text text-dark">Lorem ipsum dolor sit amet consectetur adipiscing elit vel consectetur fusce lorem elit maecenas et faucibus nulla arcu sem. In semperi ips pellentesque. A feugiat vitae id felis rhoncus tristique. Suscipit diam massa et ut euismodu nibh quis pretium, ut enim proin lobortis turpis sagittis.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-content-section-02__content content-two">
+                        <div class="content-area">
+                            <h6 class="title">We Are on the Mission to Increase Your Business</h6>
+                            <p class="text text-dark">Lorem ipsum dolor sit amet consectetur adipiscing elit vel consectetur fusce lorem elit maecenas et faucibus nulla arcu sem. In semperi ips pellentesque. A feugiat vitae id felis rhoncus tristique. Suscipit diam massa et ut euismodu nibh quis pretium, ut enim proin lobortis turpis sagittis.</p>
+                        </div>
+                        <div class="image-group">
+                            <img src="./image/about/content-1--2.png" alt="content-image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endmacro %}
