abou page complete

--- a/app/partials/pages/about/_content-02.njk
+++ b/app/partials/pages/about/_content-02.njk
@@ -3,11 +3,11 @@
         <div class="container">
             <div class="section-title-block text-center">
                 <h6 class="subtitle mb-10 text-primary">Our Story & Mission</h6>
-                <h2 class="title">The Story and mission Behind <br class=" d-none d-sm-block">
+                <h2 class="title">The Story and mission Behind <br class=" d-none d-xs-block">
                     Our Company</h2>
             </div>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-10">
                     <div class="about-content-section-02__content content-one">
                         <div class="image-group">
                             <img src="./image/about/content-1--1.png" alt="content-image">
@@ -18,7 +18,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-10">
                     <div class="about-content-section-02__content content-two">
                         <div class="content-area">
                             <h6 class="title">We Are on the Mission to Increase Your Business</h6>
