careers page setup and conten card complete complete

--- a/app/partials/components/Header/_menu.njk
+++ b/app/partials/components/Header/_menu.njk
@@ -32,26 +32,14 @@
                     <a href="about-us.html">About Us</a>
                 </li>
                 <li class="sub-menu--item nav-item-has-children">
-                    <a href="#" data-menu-get="h3" class="drop-trigger">Case Studies<i class="fas fa-angle-right"></i>
+                    <a href="#" data-menu-get="h3" class="drop-trigger">Careers<i class="fas fa-angle-right"></i>
                     </a>
                     <ul class="sub-menu" id="submenu-9">
                         <li class="sub-menu--item">
-                            <a href="case-study.html">Case Study</a>
+                            <a href="careers.html">Careers</a>
                         </li>
                         <li class="sub-menu--item">
-                            <a href="case-study-details.html">Case Study Details</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="sub-menu--item nav-item-has-children">
-                    <a href="#" data-menu-get="h3" class="drop-trigger">Services<i class="fas fa-angle-right"></i>
-                    </a>
-                    <ul class="sub-menu" id="submenu-10">
-                        <li class="sub-menu--item">
-                            <a href="service.html">Service</a>
-                        </li>
-                        <li class="sub-menu--item">
-                            <a href="service-details.html">Service Details</a>
+                            <a href="careers-details.html">Careers Details</a>
                         </li>
                     </ul>
                 </li>
