--- a/app/scss/helpers/_typography.scss
+++ b/app/scss/helpers/_typography.scss
@@ -99,3 +99,20 @@
     font-size: 30px;
   }
 }
+.cta-section-title{
+  .title{
+  font-weight: 600;
+font-size: 24px;
+line-height: 31px;
+color: var(--bs-black);
+
+}
+.text{
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.555555555555556;
+  @media (min-width: 575px) {
+    font-size: 18px;
+  }
+}
+}
