--- a/app/partials/pages/careers-details/_positions.njk
+++ b/app/partials/pages/careers-details/_positions.njk
@@ -43,7 +43,7 @@
             <div class="row card-row justify-content-center">
             {% for item in cardData%}
                 <div class="col-lg-8 col-md-10 col-xs-11 col-xl-6 single-slider" data-aos="fade-up" data-aos-delay="{{ 200 * item.id }}" data-aos-duration="1000">
-                    <a href="#" class="d-block">
+                    <a href="careers-details.html" class="d-block">
                         {{Card.PositionCard({
                             title:item.title,
                             btnText:item.btnText,
