--- a/app/scss/helpers/_typography.scss
+++ b/app/scss/helpers/_typography.scss
@@ -116,3 +116,11 @@ color: var(--bs-black);
   }
 }
 }
+.font-18{
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.555555555555556;
+  @media (min-width: 575px) {
+    font-size: 18px;
+  }
+}
