--- a/app/partials/components/_mixed.njk
+++ b/app/partials/components/_mixed.njk
@@ -46,3 +46,18 @@
       </ul>
     </div>
 {% endmacro %}
+{% macro ApplyCard(args) %}
+    <div class="apply-card">
+      <div class="card-logo">
+        <img src="./image/svg/portfolio.svg" alt="portfolio">
+      </div>
+      <h6 class="title">Apply Today</h6>
+      <p class="text">Lorem ipsum dolor sit amet consectetur adipiscing elit. Tellus augue sagittis erat consectetur est. Blandit blandit nec mauris pulvinar.</p>
+      <a href="#" class="btn">
+        Apply Now
+        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </a>
+    </div>
+{% endmacro %}
