--- a/app/scss/pages/careers-details/_content.scss
+++ b/app/scss/pages/careers-details/_content.scss
@@ -11,6 +11,11 @@
             padding-right: 67px;
         }
     }
+    &__sidebar{
+        @media (max-width:1200px) {
+            margin-bottom: 35px;
+        } 
+    }
 }
 .job-details{
     &__top-info{
