--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -1483,3 +1483,65 @@
       }
     }
 }
+.apply-card{
+  border: 3px;
+  padding: 40px 25px;
+  @media (min-width:575px) {
+    padding: 50px;
+    
+  }
+  background: var(--bs-secondary);
+  .card-logo{
+    @include square(80px,3px);
+    @include flexAllCenter;
+    background: white;  
+    margin-bottom: 20px;
+    @media (min-width:575px) {
+      margin-bottom: 30px;
+    }
+  }
+  .title{
+    font-size: 24px;
+    font-weight: 600;
+    color: var(--bs-white);
+    line-height: 1.3;
+    padding-bottom: 27px;
+    @media (min-width:575px) {
+      font-size: 28px;
+    }
+    @media (min-width:992px) {
+      font-size: 30px;
+    } 
+  }
+  .text{
+    line-height: 1.555555555555556;
+    font-weight: 600;
+    font-size: 16px;
+    color: var(--bs-white);
+    @media (min-width:575px) {
+        font-size: 18px;
+    }
+  }
+  .btn{
+    margin-top: 20px;
+    @media (min-width:575px) {
+      margin-top: 30px;
+    }
+    width: 100%;
+    background: white;
+    color: var(--bs-secondary);
+    svg{
+      transition: .3s;
+      display: block;
+      path{
+        stroke: var(--bs-secondary);
+      }
+      margin-left: 15px;
+    }
+    &:hover{
+      svg{
+        transform: translateX(5px);
+      }
+    }
+  }
+}
