--- a/app/scss/pages/contact/_content.scss
+++ b/app/scss/pages/contact/_content.scss
@@ -1,3 +1,18 @@
 .contact-content-area{
-
+    padding: 75px 0 60px;
+    @media (min-width:575px) {
+        padding:95px 0 80px;
+    }
+    @media (min-width:992px) {
+        padding: 257px 0 130px;
+    }
+    .contact-info{
+        margin-bottom: 25px;
+        @media (min-width:992px) {
+margin-bottom: 0;
+        }
+        @media (min-width:1200px) {
+            margin-right: 80px;
+        }
+    }
 }
