error page complete

--- a/app/partials/components/Header/_menu.njk
+++ b/app/partials/components/Header/_menu.njk
@@ -50,6 +50,9 @@
                         <li class="sub-menu--item">
                             <a href="support.html">Support</a>
                         </li>
+                        <li class="sub-menu--item">
+                            <a href="error.html">404</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
