--- a/app/scss/helpers/_typography.scss
+++ b/app/scss/helpers/_typography.scss
@@ -124,3 +124,45 @@ color: var(--bs-black);
     font-size: 18px;
   }
 }
+.error-page-title{
+  .big-title{
+    font-weight: 600;
+    font-size: 100px;
+    line-height: 1.302986111111111;
+    @media (min-width:575px) {
+      font-size: 114px;
+      
+    }
+    @media (min-width:768px) {
+      font-size: 124px;
+      
+    }
+    @media (min-width:992px) {
+      font-size: 134px;
+      
+    }
+    @media (min-width:1200px) {
+      font-size: 144px;
+    }
+  }
+  .title{
+    color: var(--bs-black);
+    font-weight: 600;
+    line-height: 1.303;
+    font-size: 24px;
+    @media (min-width:575px) {
+      font-size: 26px;
+    }
+    @media (min-width:1200px) {
+      font-size: 30px;
+    }
+  }
+  p{
+    font-weight: 500;
+    line-height: 1.302777777777778;
+    font-size: 16px;
+    @media (min-width:575px) {
+      font-size: 18px;
+    }
+  }
+}
