commingsoon page complete

--- a/app/partials/components/Header/_menu.njk
+++ b/app/partials/components/Header/_menu.njk
@@ -48,10 +48,13 @@
                     </a>
                     <ul class="sub-menu" id="submenu-10">
                         <li class="sub-menu--item">
-                            <a href="support.html">Support</a>
+                            <a href="error.html">404</a>
                         </li>
                         <li class="sub-menu--item">
-                            <a href="error.html">404</a>
+                            <a href="commingsoon.html">Comming Soon</a>
+                        </li>
+                        <li class="sub-menu--item">
+                            <a href="support.html">Support</a>
                         </li>
                     </ul>
                 </li>
