account page complete

--- a/app/partials/components/Header/_menu.njk
+++ b/app/partials/components/Header/_menu.njk
@@ -44,6 +44,15 @@
                     </ul>
                 </li>
                 <li class="sub-menu--item nav-item-has-children">
+                    <a href="#" data-menu-get="h3" class="drop-trigger">Account<i class="fas fa-angle-right"></i>
+                    </a>
+                    <ul class="sub-menu" id="submenu-9">
+                        <li class="sub-menu--item">
+                            <a href="signup.html">Sign Up</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="sub-menu--item nav-item-has-children">
                     <a href="#" data-menu-get="h3" class="drop-trigger">Utility<i class="fas fa-angle-right"></i>
                     </a>
                     <ul class="sub-menu" id="submenu-10">
