--- a/app/partials/pages/contact/_content.njk
+++ b/app/partials/pages/contact/_content.njk
@@ -46,7 +46,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="inputName" class="form-label">Name</label>
-                                    <input type="text" class="form-control" id="inputName" placeholder="Jhon Doe">
+                                    <input type="text" class="form-control" id="inputName" placeholder="Full Name">
                                 </div>
                             </div>
                             <div class="col-md-6">
