--- a/app/scss/pages/sign-up/_content.scss
+++ b/app/scss/pages/sign-up/_content.scss
@@ -9,6 +9,7 @@
         padding: 80px 0;
     }
     @media (min-width:992px) {
+        margin-top: 30px;
         padding: 130px 0;
     }
     &__bg {
